Finalizando a API
